# destiny-breath-architecture

./: LICENSE  README.md  SOUL.md  project-config.json  pyproject.toml  白皮书.md
destiny/: __init__.py  adapters.py  agents.py  evals.py  hooks.py  mcp.py  openclaw.py  providers.py  quality.py  runtime.py  stores.py  token_budget.py  tools.py  types.py  version.py
docs/: README.zh.md  ci-cd.md  claw-code-analysis.md  claw-code-upgrade-report.md  deerflow-ruflo-letta-analysis.md  getting-started.md  known-issues.md  optimization-roadmap.md
examples/: basic_runtime.py  benchmark_agent.py  complete_agent_task.py  destiny.toml  enhanced_agent.py  hooks_runtime.py  mcp_bridge.py  mcp_stdio_transport.py  openclaw_bridge.py  policy_runtime.py  providers_agent.py  quality_gate.py  sqlite_vector_memory.py  standard_tools.py  vector_memory.py
scripts/: __init__.py  checkpoint_reader.py  checkpoint_writer.py  circuit_breaker.py  config_merger.py  destiny_engine.py  execution_subgraph.py  execution_tracer.py  heartbeat.py  mcp_stdio.py  memory_blocks.py  meta_agent.py  model_router.py  province_graph.py  skill_index.py  tool_result_cache.py  tool_safety_chain.py  vector_memory.py
skills/windows-virt-doctor/: SKILL.md
tests/: test_all.py
