[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "destiny-breath-architecture"
version = "0.5.0"
description = "A production-oriented agent enhancement runtime with graph execution, tool safety, memory providers, tracing, evaluation, hooks, and tool adapters."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "wuchang4" }
]
keywords = ["agent", "runtime", "state-machine", "safety", "observability"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
destiny-engine = "scripts.destiny_engine:main"

[tool.setuptools]
packages = ["destiny", "scripts"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "scripts"]
addopts = "-q"
